WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
178697
AX: Crash at -[WebAccessibilityObjectWrapper _accessibilityMinValue] + 24
https://bugs.webkit.org/show_bug.cgi?id=178697
Summary
AX: Crash at -[WebAccessibilityObjectWrapper _accessibilityMinValue] + 24
Nan Wang
Reported
2017-10-23 18:11:00 PDT
0 WebCore 0x000000018dcdcb94 -[WebAccessibilityObjectWrapper _accessibilityMinValue] + 24 (WebAccessibilityObjectWrapperIOS.mm:1015) 1 UIAccessibility 0x0000000196110700 -[NSObject(AXPrivCategory) accessibilityAttributeValue:] + 832 (NSObjectAccessibility.m:5124) 2 UIAccessibility 0x00000001960ee25c _copyAttributeValueCallback + 244 (UIAccessibilityRuntime.m:271) 3 AXRuntime 0x00000001943a84d0 ___AXXMIGCopyAttributeValue_block_invoke + 96 (AccessibilityPriv.m:944) 4 AXRuntime 0x00000001943a837c _handleNonMainThreadCallback + 60 (AccessibilityPriv.m:361) <
rdar://problem/35033768
>
Attachments
patch
(4.23 KB, patch)
2017-10-23 18:16 PDT
,
Nan Wang
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Nan Wang
Comment 1
2017-10-23 18:16:14 PDT
Created
attachment 324624
[details]
patch
WebKit Commit Bot
Comment 2
2017-10-24 00:25:12 PDT
Comment on
attachment 324624
[details]
patch Clearing flags on attachment: 324624 Committed
r223881
: <
https://trac.webkit.org/changeset/223881
>
WebKit Commit Bot
Comment 3
2017-10-24 00:25:13 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug